# ofdmlib

./: .gitignore  CMakeLists.txt  README.md  devsetup.sh
cmake/: StaticAnalyzers.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/diagrams/: Gantt.ods
docs/diagrams/roadmap/: Roadmap.drawio
docs/diagrams/sequence/: ofdmlibSequenceDiagram.txt
docs/srs/: specification.aux  specification.tex  specification.toc
src/: CMakeLists.txt
src/codec/: ofdm-settings.cpp  ofdm-settings.h  ofdmcodec.cpp  ofdmcodec.h
src/codec/band-pass-modulator/: bandpass.cpp  bandpass.h
src/codec/channel-estimator/: channel-estimator.cpp  channel-estimator.h
src/codec/cyclic-prefix/: cyclicprefix.cpp  cyclicprefix.h
src/codec/detector/: accumulator.cpp  accumulator.h  block-ring-buffer.cpp  block-ring-buffer.h  detector.cpp  detector.h
src/codec/fft/: fft.cpp  fft.h  ofdmfft.cpp  ofdmfft.h
src/codec/nyquist-modulator/: nyquist-modulator.cpp  nyquist-modulator.h
src/codec/qam-modulator/: qam-modulator.h
src/coder/: ofdmcodec.cpp  ofdmcodec.h
src/coder/fft/: ofdmfft.cpp  ofdmfft.h
src/demo/: demo.cpp  trx.cpp  trx.h
src/utils/: common.h
test/: CMakeLists.txt
test/Results/: ByteErrorTransmissions.ods
test/integration/: IntegrationTests copy.cpp  IntegrationTests.cpp  TestImage.tiff
test/unit/: BandPassModulatorTest.cpp  CyclicPrefixTest.cpp  DetectorTest.cpp  FourierTransformsTest.cpp  NyquistModulatorTest.cpp  QamModulatorTest.cpp  TrxTest.cpp
test/utils/: plot.h
